# Noglem

./: .gitignore  AGENTS.md  AVALIACAO_INTEGRACAO_PATEC.md  CLAUDE.md  DEPLOY_INSTRUCTIONS.md  DESIGN.md  NOVA_APP_JULIA.md  README.md  next.config.ts  package-lock.json  package.json
services/conhecimento-backend/: Dockerfile  alembic.ini  pyproject.toml  run.py  start.sh
services/conhecimento-backend/alembic/: env.py
services/conhecimento-backend/alembic/versions/: 001_create_conhecimento_tables.py
services/conhecimento-backend/app/: main.py
services/conhecimento-backend/app/core/: config.py  deps.py
services/conhecimento-backend/app/models/: chat_message.py  chat_session.py  collection.py  document.py  document_chunk.py
services/conhecimento-backend/app/schemas/: chat.py  collection.py  document.py
services/conhecimento-backend/app/services/: chat_service.py  chunker.py  embedding.py  indexer.py  reranker.py  retriever.py  text_extractor.py
services/conhecimento-backend/scripts/: migrate_from_old_rag.py
services/patec-backend/: Dockerfile  Dockerfile.worker  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml  railway.worker.toml  start.sh
services/patec-backend/alembic/: env.py
services/patec-backend/alembic/versions/: 1948b5233ff1_add_revisoes_audit_logs_cache_analises_.py  9ef01ccda2b6_add_idioma_relatorio_to_pareceres.py  a1b2c3d4e5f6_fix_idioma_relatorio_if_not_exists.py  a3f7c8e91d02_add_mensagens_chat_table.py  b7e2f4a91c03_add_pgvector_documento_chunks.py  c2d9e1f83a47_add_disciplina_to_pareceres.py  c8d3e5f72a14_resize_embedding_vector_3072.py  d4e5f6a7b8c9_add_rodadas_avaliacao.py  ef814c223749_create_initial_tables.py  f1a0caso0001_add_requisitos_fase_caso.py  f2a0estados02_estados_v2_desfecho.py  f3a0rodadas03_rodadas_fornecedor.py  f4a0verif04_verificacao_final.py  f5a0spec05_versoes_especificacao.py  f6a0chat06_mensagem_chat_embeddings.py  f7a0comp07_complementares_resolvidos.py  f8a0verif08_item_verificacao_flag.py  f9a0qaflag09_item_qa_flags.py  fa0cond10_item_condicoes_verificadas.py
services/patec-backend/app/: main.py  worker.py
services/patec-backend/app/core/: celery_app.py  config.py  deps.py  error_handlers.py  logging.py  progress.py  security.py  (+1 more)
(+377 files in other folders)
